--- a/gsi526.html
+++ b/gsi526.html
@@ -100,8 +100,8 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
-						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 01 - Sistemas críticos</a></button></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 01 - Sistemas críticos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 02 - Processos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-gerencia_de_projetos.pdf"> Aula 03 - Gerência de projetos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
