--- a/gsi526.html
+++ b/gsi526.html
@@ -90,7 +90,7 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 30 pts <b>(24/09/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 01, 02, 03, 04, 05 e 06 </i></li>
-					<li>Prova 2 - 35 pts <b>(29/10/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i>--></li>
+					<li>Prova 2 - 35 pts <b>(29/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 07, 08, 09, 10, 11 e 12</i></li>
 					<li>Prova 3 - 35 pts <b>(03/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> <i> Aulas 12, 13, 14, 15, 16, 17 e 18</i>--></li>
 					<!--<li>Lista 1 - 2 pts <b>(29/04/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
 					<!--<li>Lista 2 - 4 pts <b>(04/06/2025)</b> <!--<img src="images/deadline.png"" alt="" height="25" width="19"></li>-->
@@ -100,15 +100,15 @@
 					<div>
 						<b>Material:</b>  
 						<ul> 
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 01 - Sistemas críticos</a></button></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula1-plano_do_curso.pptx"> Apresentação da disciplina</a></button>  <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=BgoylssTeRs"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula2-sistemas_criticos.pdf"> Aula 01 - Sistemas críticos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-processos.pptx"> Aula 02 - Processos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula4-gerencia_de_projetos.pdf"> Aula 03 - Gerência de projetos</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-openUp.pdf"> Aula 04 - OpenUp</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula3-scrum.pptx"> Aula 05 - Scrum</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula5-smells.pptx"> Aula 05 - Reengenharia, Refactoring e Code Smells</a></button></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula6-reuso.pptx"> Aula 06 - Reuso de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=QnfHYobvDg8"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula7-linha-de-produtos.pptx"> Aula 07 - Linha de Produtos de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/rBCYVuu5zVc"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula8-arquitetura.pptx"> Aula 08 - Arquitetura de Software</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=KG7PtDgY9_I"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula9-padroes-arquiteturais.pptx"> Aula 09 - Padrões Arquiteturais: Camadas, MVC e Microservices </a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/Bw5CcmbzyWQ"> Ver Videoaula </a>)--></li>
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula10-arquitetura-hexagonal-serverless.pptx"> Aula 10 - Padrões Arquiteturais: Arquitetura Hexagonal e Serverless</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://www.youtube.com/watch?v=JxgaUJmWVQQ"> Ver Videoaula </a>)--></li>
