--- a/lab-pc1.html
+++ b/lab-pc1.html
@@ -81,7 +81,7 @@
 					<b>Plano didático e Livro:</b>
 					<ul>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Plano Didático-Lab.PC1-Versão CQTEC 2025.2.pdf"> Plano Didático <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Apostila_Python.pdf"> Apostila de Python <img src="images/new2.gif" alt="" height="11" width="28"></a></li>-->
 					</ul>
 					</div>
 					<!--<div>
@@ -112,7 +112,7 @@
 					<div>					
 					<b>Material:</b> 
 					<ul>						
-					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 1.pdf"> Exercício Prático 1</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 2.pdf"> Exercício Prático 2</a></li>			
 					<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-pc1/Prática 4.pdf"> Exercício Prático 4</a></li>
