--- a/poo-lab-python.html
+++ b/poo-lab-python.html
@@ -92,7 +92,7 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T01.pdf"> Relação dos Grupos - Turma 01 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Grupos_Lab_PC2_T02.pdf"> Relação dos Grupos - Turma 02 <img src="images/new2.gif" alt="" height="11" width="28"></a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho1.pdf"> Roteiro para Avaliação do Trabalho 1 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a>--></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho2.pdf"> Roteiro para Avaliação do Trabalho 2 <img src="images/deadline.png" alt="" height="25" width="19"></a></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/trabalhos/Roteiro_Trabalho3.pdf"> Roteiro para Avaliação do Trabalho 3 <img src="images/new2.gif" alt="" height="11" width="28"></a>--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_entrevistas.pdf"> Horário das Entrevistas</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>
 					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/monitoria_resultados.pdf"> Resultados de Monitoria</a> <img src="images/new2.gif" alt="" height="11" width="28">--></li>				
@@ -121,8 +121,8 @@
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 3.pdf"> Exercício Prático 3</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 4.pdf"> Exercício Prático 4</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 5.pdf"> Exercício Prático 5</a></li>
-					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
-					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
+					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 6.pdf"> Exercício Prático 6</a></li>
+					<!--<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 7.pdf"> Exercício Prático 7</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 8.pdf"> Exercício Prático 8</a></li>
 					<li><i class="icon-book"></i><a href="aulas/lab-poo/python/Prática 9.pdf"> Exercício Prático 9</a></li>-->
 					</ul>
