--- a/pc1.html
+++ b/pc1.html
@@ -86,8 +86,8 @@
 					<b>Avaliação:</b>
 					<ul>
 					<li>Prova 1 - 25 pts <b>(26/09/2025)</b> <img src="images/deadline.png" alt="" height="25" width="19"> (<i> Aulas 01, 02, 03, 04 e 05 </i>)</li>
-					<li>Prova 2 - 30 pts <b>(24/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06, 07 e 08 </i>)</li>
-					<li>Prova 3 - 30 pts <b>(05/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 09, 10, 11 e 12 </i>)--></li>
+					<li>Prova 2 - 30 pts <b>(24/10/2025)</b> <img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 06 e 07 </i>)</li>
+					<li>Prova 3 - 30 pts <b>(05/12/2025)</b> <!--<img src="images/new2.gif" alt="" height="11" width="28"> (<i> Aulas 08, 09, 10, 11 e 12 </i>)--></li>
 						
 					</ul>
 					</div>  
