--- a/gsi526.html
+++ b/gsi526.html
@@ -118,7 +118,7 @@
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula14-idiomas-programacao.pptx"> Aula 14 - Idiomas de Programação</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/CRl9WpDKj0I"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula15-devops.pptx"> Aula 15 - DevOps</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/AovtkO8_sx4"> Ver Videoaula </a>)--></li>
 						<li><i class="icon-book"></i><a href="aulas/gsi526/aula16-principios-de-projeto.pptx"> Aula 16 - Princípios de Projeto</a></button> <!--<img src="images/new2.gif" alt="" height="11" width="28"><!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/2UbWM-DL5gg"> Ver Videoaula </a>)--></li>
-						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
+						<li><i class="icon-book"></i><a href="aulas/gsi526/aula17-padroes-de-projeto.pptx"> Aula 17 - Padrões de projeto (Parte 1)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/9wZnhCBdzbA"> Ver Videoaula </a>)--></li> 
 						<!--<li><i class="icon-book"></i><a href="aulas/gsi526/aula18-padroes-de-projeto.pptx"> Aula 18 - Padrões de projeto (Parte 2)</a></button> <!--( <img src="images/youtube.png" alt="" height="20" width="27"> <a href="https://youtu.be/bzed6WnSnaY"> Ver Videoaula </a>)--></li>
 						</ul> 
 					</div> 
